[gd_scene load_steps=2 format=3 uid="uid://c0mlw663dwp4j"]

[ext_resource type="Script" path="res://scripts/options.gd" id="1_3pxui"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_3pxui")

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = 689.0
offset_right = 112.0
offset_bottom = 720.0
grow_vertical = 0
size_flags_vertical = 3
text = "Back"

[node name="OptionTabMenu" type="TabContainer" parent="."]
custom_minimum_size = Vector2(0, 689)
offset_right = 1280.0
offset_bottom = 689.0
current_tab = 0

[node name="Video" type="TabBar" parent="OptionTabMenu"]
layout_mode = 2
metadata/_tab_index = 0

[node name="OptionsGrid" type="GridContainer" parent="OptionTabMenu/Video"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
columns = 2

[node name="WindowMode" type="Label" parent="OptionTabMenu/Video/OptionsGrid"]
layout_mode = 2
text = "Window Mode:"

[node name="WindowModeDD" type="OptionButton" parent="OptionTabMenu/Video/OptionsGrid"]
layout_mode = 2
selected = 0
item_count = 3
popup/item_0/text = "Windowed"
popup/item_1/text = "Windowed Borderless"
popup/item_1/id = 1
popup/item_2/text = "Fullscreen"
popup/item_2/id = 2

[node name="Resolution" type="Label" parent="OptionTabMenu/Video/OptionsGrid"]
layout_mode = 2
text = "Resolution:"

[node name="ResolutionDD" type="OptionButton" parent="OptionTabMenu/Video/OptionsGrid"]
layout_mode = 2
selected = 2
item_count = 5
popup/item_0/text = "320 x 180"
popup/item_1/text = "640 x 360"
popup/item_1/id = 1
popup/item_2/text = "1280 x 720"
popup/item_2/id = 2
popup/item_3/text = "1920 x 1080"
popup/item_3/id = 3
popup/item_4/text = "2560 x 1440"
popup/item_4/id = 4

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="item_selected" from="OptionTabMenu/Video/OptionsGrid/WindowModeDD" to="." method="_on_window_mode_dd_item_selected"]
[connection signal="item_selected" from="OptionTabMenu/Video/OptionsGrid/ResolutionDD" to="." method="_on_resolution_dd_item_selected"]
